fixed overflow issue and added sort option

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,12 +1,11 @@
 .footer-section {
   background-color: #0f172a;
   height: 256px;
-  width: 100vw;
-  padding-top: 38px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
+  justify-content: center;
 }
 @media (min-width: 992px) {
   .footer-section {
@@ -17,7 +16,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 32px;
 }
 .footer-website-logo {
   margin-right: 12px;
@@ -36,10 +34,9 @@
   font-size: 20px;
   font-style: italic;
   font-weight: 700;
-  line-height: 24px;
-  height: 24px;
   letter-spacing: 0px;
   color: #ffffff;
+  line-height: 24px;
 }
 @media (min-width: 992px) {
   .footer-website-name {
