--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -1,13 +1,16 @@
+.nav-container-sm {
+  width: 100%;
+  background-color: #f8fafc;
+}
 .nav-bar-sm {
   height: 64px;
-  background-color: #f8fafc;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-left: 24px;
   padding-right: 24px;
   position: sticky;
-  width: 100vw;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .nav-container-sm {
@@ -25,7 +28,7 @@
     padding-left: 24px;
     padding-right: 24px;
     background-color: #f8fafc;
-    width: 100vw;
+    width: 100%;
   }
   .nav-body {
     width: 100%;
@@ -87,7 +90,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  width: 100vw;
+  width: 100%;
   padding-left: 32px;
   padding-right: 26px;
 }
